vendor/feedvalidator/demo/testcases/opml/errors/missingTitleAttribute.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Guidelines for validating OPML reference:

  Subscription lists
  title is probably the same as text, it should not be omitted.
-->

<!--
  Description:  A title attribute is recommended in an "rss" outline
  Expect:       MissingTitleAttr{element:outline}
-->

<opml version="1.1">
	<head>
		<title>Missing title Attribute</title>
		</head>
	<body>
		<outline text="Feed 1" type="rss" xmlUrl="http://www.badopml.com/rss.xml"/>
		</body>
	</opml>
